--- a/blog-server/build.gradle
+++ b/blog-server/build.gradle
@@ -3,20 +3,26 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.11'
     id 'org.springframework.boot' version '2.1.3.RELEASE'
 }
-
 group 'com.server'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
+
+apply plugin: 'io.spring.dependency-management'
 
 repositories {
     mavenCentral()
 }
 
+test {
+    exclude '**'
+}
+
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.3.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.3.RELEASE'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '2.1.3.RELEASE'
+//    compile group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '2.1.3.RELEASE', ext: 'pom'
 }
 
 compileKotlin {
