--- a/blog-server/build.gradle
+++ b/blog-server/build.gradle
@@ -10,7 +10,9 @@ sourceCompatibility = 1.8
 apply plugin: 'io.spring.dependency-management'
 
 repositories {
-    mavenCentral()
+    maven{
+        url 'http://maven.aliyun.com/nexus/content/groups/public/'
+    }
 }
 
 test {
@@ -21,8 +23,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '2.1.3.RELEASE'
-//    compile group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '2.1.3.RELEASE', ext: 'pom'
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.2'
 }
 
 compileKotlin {
