--- a/blog-server/build.gradle
+++ b/blog-server/build.gradle
@@ -22,8 +22,17 @@ test {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.2'
+    compile group: 'com.caucho', name: 'hessian', version: '4.0.60'
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.56'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
+    compile group: 'com.aliyun.oss', name: 'aliyun-sdk-oss', version: '3.4.1'
+    compile group: 'org.apache.shiro', name: 'shiro-spring', version: '1.4.0'
+    compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.2'
+    compile group: 'javax.inject', name: 'javax.inject', version: '1'
 }
 
 compileKotlin {
