--- a/blog-server/src/main/resources/application.yml
+++ b/blog-server/src/main/resources/application.yml
@@ -1,2 +1,19 @@
 server:
   port: 9002
+
+spring:
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    timeout: 1000ms
+  datasource:
+    url: jdbc:mysql://localhost:3306/easy-oa?characterEncoding=utf8&useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: maple
+    password: maple
+    dbcp2:
+      max-idle: 10
+      max-wait-millis: 10000
+      initial-size: 5
+  thymeleaf:
+    cache: false
