--- a/blog-server/src/main/resources/application.yml
+++ b/blog-server/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     port: 6379
     timeout: 1000ms
   datasource:
-    url: jdbc:mysql://localhost:3306/easy-oa?characterEncoding=utf8&useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/blog-server?characterEncoding=utf8&useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: maple
     password: maple
