--- a/blog-server/build.gradle
+++ b/blog-server/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile group: 'org.apache.shiro', name: 'shiro-spring', version: '1.4.0'
     compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.2'
     compile group: 'javax.inject', name: 'javax.inject', version: '1'
+    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.8'
 }
 
 compileKotlin {
