--- a/blog-server/src/main/resources/application.yml
+++ b/blog-server/src/main/resources/application.yml
@@ -15,5 +15,9 @@ spring:
       max-idle: 10
       max-wait-millis: 10000
       initial-size: 5
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
   thymeleaf:
     cache: false
