--- a/blog-server/build.gradle
+++ b/blog-server/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '1.3.2'
     compile group: 'javax.inject', name: 'javax.inject', version: '1'
     compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.8'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+
 }
 
 compileKotlin {
