--- a/blog-server/src/main/resources/application.yml
+++ b/blog-server/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
       initial-size: 5
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
   thymeleaf:
     cache: false
